--- a/Tutorial.WPF/App.xaml
+++ b/Tutorial.WPF/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Tutorial.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:command="clr-namespace:Tutorial.WPF.ViewModel"
+             xmlns:command="clr-namespace:Tutorial.WPF.Command"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
@@ -34,7 +34,9 @@
             <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
 
             <!--Chrome Button Styles-->
+            <command:CloseApplicationCommand x:Key="CloseCommand"/>
             <Style TargetType="{x:Type Button}" x:Key="WindowButtonStyleIconClose">
+                <Setter Property="Command" Value="{StaticResource CloseCommand}"/>
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
