--- a/Tutorial.WPF/MainWindow.xaml
+++ b/Tutorial.WPF/MainWindow.xaml
@@ -4,11 +4,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:bit="clr-namespace:Binance.Net.Objects.Spot.MarketStream;assembly=Binance.Net"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
         mc:Ignorable="d"
         Background="{StaticResource MainBackgroundColor}"
         WindowState="Normal"
         WindowStyle="None"
         ResizeMode="CanResize"
+        Width="800"
+        Height="600"
         Title="MainWindow">
     <WindowChrome.WindowChrome>
         <!--Caption height set to 0 to avoid hitbox conflics-->
@@ -61,7 +64,8 @@
             <TextBlock Style="{StaticResource  DefaultHeaderTextBlockStyle}" Text="Enter searched Crypto Value"/>
             <TextBox Style="{DynamicResource TextBoxStyle1}"
                      x:Name="ValueToTrack"
-                     Text="{Binding NewCryptoName}"/>
+                     Text="{Binding NewCryptoName}">
+            </TextBox>
             <Button Style="{StaticResource DefaultButtonStyle}"
                     Content="Track Selected"/>
         </StackPanel>
