--- a/Tutorial.WPF/View/ItemView.xaml
+++ b/Tutorial.WPF/View/ItemView.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Tutorial.WPF.View"
-             xmlns:VM="clr-namespace:Tutorial.WPF.ViewModel"
+             xmlns:ice="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+             xmlns:converter="clr-namespace:Tutorial.WPF.Converters"
+             xmlns:control="clr-namespace:Tutorial.WPF.Controls"
              xmlns:data="clr-namespace:Binance.Net.Objects.Spot.MarketStream;assembly=Binance.Net" xmlns:behaviours="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -12,19 +13,25 @@
         <Style TargetType="TextBlock" x:Key="ValueTextStyle">
             <Setter Property="Margin" Value="5"/>
         </Style>
+        <converter:ScaleFactorConverter x:Key="BestBidPriceScale"/>
+        <converter:ScaleFactorConverter x:Key="BestBidQuantityScale"/>
+        <converter:ScaleFactorConverter x:Key="BestAskPriceScale"/>
+        <converter:ScaleFactorConverter x:Key="BestAskQuantityScale"/>
         <DataTemplate DataType="{x:Type data:BinanceStreamBookPrice}" x:Key="itemKey">
-            <UniformGrid Rows="1">
+            <StackPanel Orientation="Vertical">
                 <TextBlock Style="{StaticResource ValueTextStyle}" Text="{Binding Symbol}"/>
                 <TextBlock Style="{StaticResource ValueTextStyle}" Text="{Binding UpdateId}"/>
                 <TextBlock Style="{StaticResource ValueTextStyle}" Text="{Binding BestBidPrice}"/>
                 <TextBlock Style="{StaticResource ValueTextStyle}" Text="{Binding BestBidQuantity}"/>
                 <TextBlock Style="{StaticResource ValueTextStyle}" Text="{Binding BestAskPrice}"/>
                 <TextBlock Style="{StaticResource ValueTextStyle}" Text="{Binding BestAskQuantity}"/>
-            </UniformGrid>
+            </StackPanel>
         </DataTemplate>
     </UserControl.Resources>
     
-    <Border Height="300" Width="300"  BorderBrush="Aquamarine" BorderThickness="2" CornerRadius="5">
+    <Border 
+        Height="500" Width="300" 
+        BorderBrush="Aquamarine" BorderThickness="2" CornerRadius="5">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -33,25 +40,191 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Button Grid.Column="1" Grid.Row="0" Background="Red">
                 <Button.Content>
                     <TextBlock Text="X"/>
                 </Button.Content>
             </Button>
-            <Border BorderThickness="0 0 0 3" BorderBrush="CadetBlue">
+            <Border
+                Background="White"
+                BorderThickness="0 0 0 3" BorderBrush="CadetBlue">
                 <TextBlock 
                     Text="{Binding CrypoName}" 
                     FontSize="22"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center"/>
             </Border>
-            <ListView 
-                ItemTemplate="{StaticResource itemKey}"
+         
+            <ItemsControl 
                 ItemsSource="{Binding Data}"
                 Grid.Row="1" 
                 Grid.ColumnSpan="2">
-            </ListView>
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid x:Name="g">
+                            <Rectangle 
+                                 RenderOptions.BitmapScalingMode="LowQuality"
+                                 VerticalAlignment="Bottom"
+                                 Width="{Binding ElementName=text, Path=ActualWidth}"
+                                 Height="{Binding ElementName=g,Path=ActualHeight}">
+                                <Rectangle.RenderTransform>
+                                    <ScaleTransform ScaleY="{Binding BestAskQuantity,Converter={converter:ScaleFactorConverter},Mode=OneWay}"
+                                                     CenterY="{Binding ElementName=g ,Path=ActualHeight}"/>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Style>
+                                    <Style TargetType="Rectangle">
+                                        <Setter Property="Fill">
+                                            <Setter.Value>
+                                                <SolidColorBrush Color="SteelBlue" ice:Freeze="True"/>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </Rectangle.Style>
+                            </Rectangle>
+                            <TextBlock x:Name="text" Text="{Binding BestAskQuantity}">
+                                <TextBlock.Foreground>
+                                    <SolidColorBrush ice:Freeze="True" Color="Orange"/>
+                                </TextBlock.Foreground>
+                            </TextBlock>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+
+
+
+            <ItemsControl 
+                ItemsSource="{Binding Data}"
+                Grid.Row="2" 
+                Grid.ColumnSpan="2">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid x:Name="g">
+                            <Rectangle 
+                                 RenderOptions.BitmapScalingMode="LowQuality"
+                                 VerticalAlignment="Bottom"
+                                 Width="{Binding ElementName=text, Path=ActualWidth}"
+                                 Height="{Binding ElementName=g,Path=ActualHeight}">
+                                <Rectangle.RenderTransform>
+                                    <ScaleTransform ScaleY="{Binding BestBidPrice,Converter={converter:ScaleFactorConverter},Mode=OneWay}"
+                                                     CenterY="{Binding ElementName=g ,Path=ActualHeight}"/>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Style>
+                                    <Style TargetType="Rectangle">
+                                        <Setter Property="Fill">
+                                            <Setter.Value>
+                                                <SolidColorBrush Color="SteelBlue" ice:Freeze="True"/>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </Rectangle.Style>
+                            </Rectangle>
+                            <TextBlock x:Name="text" Text="{Binding BestBidPrice}">
+                                <TextBlock.Foreground>
+                                    <SolidColorBrush ice:Freeze="True" Color="Orange"/>
+                                </TextBlock.Foreground>
+                            </TextBlock>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+            <ItemsControl 
+                ItemsSource="{Binding Data}"
+                Grid.Row="3" 
+                Grid.ColumnSpan="2">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid x:Name="g">
+                            <Rectangle 
+                                 RenderOptions.BitmapScalingMode="LowQuality"
+                                 VerticalAlignment="Bottom"
+                                 Width="{Binding ElementName=text, Path=ActualWidth}"
+                                 Height="{Binding ElementName=g,Path=ActualHeight}">
+                                <Rectangle.RenderTransform>
+                                    <ScaleTransform ScaleY="{Binding BestBidQuantity,Converter={converter:ScaleFactorConverter},Mode=OneWay}"
+                                                     CenterY="{Binding ElementName=g ,Path=ActualHeight}"/>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Style>
+                                    <Style TargetType="Rectangle">
+                                        <Setter Property="Fill">
+                                            <Setter.Value>
+                                                <SolidColorBrush Color="SteelBlue" ice:Freeze="True"/>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </Rectangle.Style>
+                            </Rectangle>
+                            <TextBlock x:Name="text" Text="{Binding BestBidQuantity}">
+                                <TextBlock.Foreground>
+                                    <SolidColorBrush ice:Freeze="True" Color="Orange"/>
+                                </TextBlock.Foreground>
+                            </TextBlock>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+            <ItemsControl 
+                ItemsSource="{Binding Data}"
+                Grid.Row="4" 
+                Grid.ColumnSpan="2">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid x:Name="g">
+                            <Rectangle 
+                                 RenderOptions.BitmapScalingMode="LowQuality"
+                                 VerticalAlignment="Bottom"
+                                 Width="{Binding ElementName=text, Path=ActualWidth}"
+                                 Height="{Binding ElementName=g,Path=ActualHeight}">
+                                <Rectangle.RenderTransform>
+                                    <ScaleTransform ScaleY="{Binding BestAskPrice,Converter={converter:ScaleFactorConverter},Mode=OneWay}"
+                                                    CenterY="{Binding ElementName=g ,Path=ActualHeight}"/>
+                                </Rectangle.RenderTransform>
+                                <Rectangle.Style>
+                                    <Style TargetType="Rectangle">
+                                        <Setter Property="Fill">
+                                            <Setter.Value>
+                                                <SolidColorBrush Color="SteelBlue" ice:Freeze="True"/>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </Rectangle.Style>
+                            </Rectangle>
+                            <TextBlock x:Name="text" Text="{Binding BestAskPrice}">
+                                <TextBlock.Foreground>
+                                    <SolidColorBrush ice:Freeze="True" Color="Orange"/>
+                                </TextBlock.Foreground>
+                            </TextBlock>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </Grid>
     </Border>
 </UserControl>
