--- a/LayoutBasics/MainWindow.xaml
+++ b/LayoutBasics/MainWindow.xaml
@@ -4,10 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:LayoutBasics.Controls"
+        xmlns:views="clr-namespace:LayoutBasics.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <controls:SimpleCanvas>
-        <TextBlock Text="Something"/>
-        <TextBlock Text="Happening" controls:SimpleCanvas.Top="20"/>
-    </controls:SimpleCanvas>
+    <Grid>
+        <views:PlayerView/>
+    </Grid>
 </Window>
