--- a/MvvmBasics/View/EventToCommandView.xaml
+++ b/MvvmBasics/View/EventToCommandView.xaml
@@ -13,7 +13,7 @@
     
     <b:Interaction.Triggers>
         <b:EventTrigger EventName="Loaded">
-            <b:InvokeCommandAction Command="{Binding GetDataCommand}" PassEventArgsToCommand="False"/>
+            <b:InvokeCommandAction Command="{Binding SelectionCommand}" PassEventArgsToCommand="False"/>
         </b:EventTrigger>
     </b:Interaction.Triggers>
 
